# otus-cpp

./: .travis.yml  CMakeLists.txt  README.md  bintray.json  helloworld.cpp  helloworld.h  test.cpp
inc/: helloworld.h
src/: gtest_test.cpp  main.cpp
